# fernweh

./: .gitignore  CLAUDE.md  DOCUMENTATION.md  LICENSE  PLAN.md  README.md  TESTING.md  fernweh.py  main.py  pyproject.toml  requirements-dev.txt
content/: stages.json
src/fernweh/: __init__.py  afflictions.py  ending.py  game.py  particles.py  scenes.py  stages.py  state.py  tween.py  ui.py
tests/: run_all_tests.sh  test_afflictions.py  test_bootstrap.py  test_ending.py  test_stages.py  test_state.py  test_tween.py  test_ui.py
